--- a/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
+++ b/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,6 +46,7 @@
     <Compile Include="ImageFetchRequest.cs" />
     <Compile Include="ImageFetchResult.cs" />
     <Compile Include="LocalImageFetcher.cs" />
+    <Compile Include="LocalImageFetchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
