--- a/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
+++ b/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
@@ -42,8 +42,10 @@
   <ItemGroup>
     <Compile Include="Aquisition.cs" />
     <Compile Include="IImageFetcher.cs" />
+    <Compile Include="ImageStore\IImageStore.cs" />
     <Compile Include="ImageFetchRequest.cs" />
     <Compile Include="ImageFetchResult.cs" />
+    <Compile Include="ImageStore\ImageStore.cs" />
     <Compile Include="LocalImageFetcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
