--- a/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
+++ b/MugMatcher/MugMatcher.ImageProvider/MugMatcher.ImageProvider.csproj
@@ -30,15 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aquisition.cs" />
@@ -46,6 +50,7 @@
     <Compile Include="ImageStore\IImageStore.cs" />
     <Compile Include="ImageFetchRequest.cs" />
     <Compile Include="ImageFetchResult.cs" />
+    <Compile Include="ImageStore\ImageMetaData.cs" />
     <Compile Include="ImageStore\ImageStore.cs" />
     <Compile Include="LocalImageFetcher.cs" />
     <Compile Include="LocalImageFetchResult.cs" />
