--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -10,6 +10,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="TemporaryImageStorePath" value ="ImageStore"/>
+    <add key="LocalImageSearchPath" value="TestImages"/>
+  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
