--- a/MugMatcher/MugMatcher.Tests/MugMatcher.Tests.csproj
+++ b/MugMatcher/MugMatcher.Tests/MugMatcher.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0D2135A4-30BC-490F-BB2B-E17CD461D185}</ProjectGuid>
+    <ProjectGuid>{7F3CCD1D-0FD7-49D8-8CCF-5D5069F3388E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MugMatcher</RootNamespace>
-    <AssemblyName>MugMatcher</AssemblyName>
+    <RootNamespace>MugMatcher.Tests</RootNamespace>
+    <AssemblyName>MugMatcher.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,20 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Neurotec">
-      <HintPath>..\Lib\Neurotec.dll</HintPath>
-    </Reference>
-    <Reference Include="Neurotec.Biometrics">
-      <HintPath>..\Lib\Neurotec.Biometrics.dll</HintPath>
-    </Reference>
-    <Reference Include="Neurotec.Biometrics.Client">
-      <HintPath>..\Lib\Neurotec.Biometrics.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Neurotec.Licensing">
-      <HintPath>..\Lib\Neurotec.Licensing.dll</HintPath>
-    </Reference>
-    <Reference Include="Neurotec.Media">
-      <HintPath>..\Lib\Neurotec.Media.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,23 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Scanner.cs" />
+    <Compile Include="ScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScanResult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NFaceVerification.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="NLicensing.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="NMedia.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="NMediaProc.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MugMatcher\MugMatcher.csproj">
+      <Project>{0D2135A4-30BC-490F-BB2B-E17CD461D185}</Project>
+      <Name>MugMatcher</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
