--- a/MugMatcher/MugMatcher/MugMatcher.csproj
+++ b/MugMatcher/MugMatcher/MugMatcher.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SqlLite.cs" />
     <Compile Include="Scanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanResult.cs" />
