--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -12,7 +12,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="TemporaryImageStorePath" value ="ImageStore"/>
     <add key="LocalImageSearchPath" value="TestImages"/>
-  
+    <add key="TwitterAccessKey" value="qLy8zHnWBYMC17x7IH6jx3fee"/>
+    <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es"/>  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
