Committing up instagram fetcher

--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -13,7 +13,8 @@
     <add key="TemporaryImageStorePath" value ="ImageStore"/>
     <add key="LocalImageSearchPath" value="TestImages"/>
     <add key="TwitterAccessKey" value="qLy8zHnWBYMC17x7IH6jx3fee"/>
-    <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es"/>  
+    <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es"/>
+    <add key="InstagramAccessToken" value="4092770693.e029fea.71fb21e304284dce9496cb4cdb635b8b"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
