--- a/MugMatcher/MugMatcher.ImageProvider.Tests/MugMatcher.ImageProvider.Tests.csproj
+++ b/MugMatcher/MugMatcher.ImageProvider.Tests/MugMatcher.ImageProvider.Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InstagramImageFetcherTests.cs" />
     <Compile Include="TwitterImageFetcherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
