--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -10,12 +10,12 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="TemporaryImageStorePath" value ="ImageStore"/>
-    <add key="LocalImageSearchPath" value="TestImages"/>
-    <add key="TwitterAccessKey" value="qLy8zHnWBYMC17x7IH6jx3fee"/>
-    <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es"/>
-    <add key="GoogleAPIKey" value ="AIzaSyB-LOommQ-bfWysfqgnql6aOweiHy4KZCM"/>
-    <add key="CustomSearchEngineId" value ="002232642848038589219%3Aoizy299vm8k"/>
+    <add key="TemporaryImageStorePath" value="ImageStore" />
+		<add key="LocalImageSearchPath" value="C:\Users\robert.marshall.FIOFFICE\Documents\HackManchester\TestImages\ImagesToScan"/>
+		<add key="TwitterAccessKey" value="qLy8zHnWBYMC17x7IH6jx3fee" />
+    <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es" />
+    <add key="GoogleAPIKey" value="AIzaSyB-LOommQ-bfWysfqgnql6aOweiHy4KZCM" />
+    <add key="CustomSearchEngineId" value="002232642848038589219%3Aoizy299vm8k" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
