--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -16,6 +16,8 @@
     <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es"/>
     <add key="GoogleAPIKey" value ="AIzaSyB-LOommQ-bfWysfqgnql6aOweiHy4KZCM"/>
     <add key="CustomSearchEngineId" value ="002232642848038589219%3Aoizy299vm8k"/>
+    <add key="FacebookApiKey" value ="1855596504674795"/>
+    <add key="FacebookSecretKey" value="6f70d91d7864771e0a8e64b0fba55fc4"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
