--- a/MugMatcher/MugMatcher.Web/Web.config
+++ b/MugMatcher/MugMatcher.Web/Web.config
@@ -10,8 +10,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="TemporaryImageStorePath" value="ImageStore" />
-		<add key="LocalImageSearchPath" value="C:\Users\robert.marshall.FIOFFICE\Documents\HackManchester\TestImages\ImagesToScan"/>
+    <add key="TemporaryImageStorePath" value="C:\temp\scanned" />
+		<add key="LocalImageSearchPath" value="C:\Users\robert.marshall.FIOFFICE\Documents\HackManchester\TestImages\MissingPeople"/>
 		<add key="TwitterAccessKey" value="qLy8zHnWBYMC17x7IH6jx3fee" />
     <add key="TwitterSecretKey" value="osxaNQhJbHvsfvEkKB4qsJnV4GbGAtFN65aQyJ3S1Sj3ClA6es" />
     <add key="InstagramAccessToken" value="4092770693.e029fea.71fb21e304284dce9496cb4cdb635b8b"/>
