--- a/MugMatcher/MugMatcher/MugMatcher.csproj
+++ b/MugMatcher/MugMatcher/MugMatcher.csproj
@@ -57,8 +57,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FaceResult.cs" />
     <Compile Include="MugMatcher.cs" />
     <Compile Include="SqlLite.cs" />
     <Compile Include="Scanner.cs" />
