--- a/MugMatcher/MugMatcher.Web/MugMatcher.Web.csproj
+++ b/MugMatcher/MugMatcher.Web/MugMatcher.Web.csproj
@@ -103,6 +103,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\logo.png" />
     <Content Include="Content\Site.css">
       <DependentUpon>Site.less</DependentUpon>
     </Content>
